--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,6 +1,6 @@
 <div class="share sticky-top sticky-top-offset">
     <p>
-        Share
+        Partager
     </p>
     <ul>
         <li class="ml-1 mr-1">
