change footer image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -154,6 +154,7 @@ ga('send', 'pageview');
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">    
                 <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">Mediumish Jekyll Theme</a> by WowThemes.net
+                - image footer par <a href="https://pixabay.com/fr/users/lolorun-14090081/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=5208280">lolorun</a> de <a href="https://pixabay.com/fr/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=5208280">Pixabay</a>
             </div>
         </div>
     </div>
