--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -128,8 +128,11 @@ section.recent-posts {
 }
 
 .maxthumb {
-    max-height: 300px;
     overflow: hidden;
+}
+
+.smallSource {
+    font-size: smaller;
 }
 
 .listfeaturedtag .card,
