--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -128,6 +128,7 @@ section.recent-posts {
 }
 
 .maxthumb {
+    text-align: center;
     overflow: hidden;
 }
 
@@ -325,6 +326,7 @@ span.post-read-more a:hover {
 .mainheading h1.posttitle {
     font-weight: 700;
     margin-bottom: 1rem;
+    text-align: center;
 }
 
 .footer {
@@ -362,8 +364,11 @@ blockquote {
     margin: 0 0 1.5rem 0;
 }
 
+.post-img {
+    text-align: center;
+}
+
 .featured-image {
-    display: block;
     margin-bottom: 1.5rem;
 }
 
@@ -859,7 +864,8 @@ iframe {
 }
 
 .card .img-fluid {
-    width: 100%;
+    max-height: 300px;
+    width: auto;
 }
 
 .sticky-top-80 {
