--- a/_layouts/optin.html
+++ b/_layouts/optin.html
@@ -1,23 +1,20 @@
----
-title: "Categories"
-layout: default
-permalink: "/optin.html"
----
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+    <meta content="">
+    <link href="{{ site.baseurl }}/assets/css/optin.css" rel="stylesheet">
+  </head>
+  <body>
+    <div>
+    <style>
 
-<div class="row listrecent">
-{% for category in site.categories %}
-<div class="section-title col-md-12 mt-4">
-<h2 id="{{ category[0] | replace: " ","-" }}">Categorie <span class="text-capitalize">{{ category[0] }}</span></h2>
+  </style>
+  	<div id="cadre">
+  		{{ content }}
 </div>
-{% assign pages_list = category[1] %}
-{% for post in pages_list %}
-{% if post.title != null %}
-{% if group == null or group == post.group %}
-{% include postbox.html %}
-{% endif %}
-{% endif %}
-{% endfor %}
-{% assign pages_list = nil %}
-{% assign group = nil %}
-{% endfor %}
 </div>
+
+<!-- /AWeber Web Form Generator 3.0.1 -->
+  </body>
+</html>
