--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,8 +17,17 @@
 /* latin-ext */
 @font-face {
   font-family: 'Libre Baskerville';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/librebaskerville/v9/kmKnZrc3Hgbbcjq75U4uslyuy4kn0qNXaxMICA.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  src: url(../fonts/LibreBaskerville-Regular.ttf);
+}
+
+@font-face {
+  font-family: 'Libre Baskerville';
+  src: url(../fonts/LibreBaskerville-Italic.ttf);
+  font-style: italic
+}
+
+@font-face {
+  font-family: 'Libre Baskerville';
+  src: url(../fonts/LibreBaskerville-Bold.ttf);
+  font-weight: bold;
 }
